# ProyectoI-DatosII

./: README.md
Proyecto/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  imageprocessing.cpp  imageprocessing.hpp  run  servermain.cpp  text.cpp
Proyecto I/: cliente  cliente.c  messageServer.json  servidor  servidor.c
